# turtlefmt

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HOW_TO_RELEASE.md  README.md  build.rs  build_manylinux_wheel.sh  pyproject.toml  typos.toml
.github/workflows/: build.yml  manylinux_build.sh  musllinux_build.sh
src/: lib.rs  main.rs
tests/: format.rs  from.simple.ttl  to.simple.default_inverted.ttl  to.simple.ttl  w3c_testsuite.rs
tree-sitter/: grammar.js  tree-sitter.json
tree-sitter/corpus/: mapping.txt
