[package]
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
description = "Auto-formatter for RDF Turtle"
build = "build.rs"
edition = "2021"
keywords = ["Turtle"]
license = "Apache-2.0"
name = "turtlefmt"
readme = "README.md"
repository = "https://gitlab.com/helsing/turtlefmt"
rust-version = "1.65.0"
version = "0.1.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
diffy = "0.3"
tree-sitter = "0.20"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
oxigraph = "0.3" # TODO: use only oxrdf and the parsers
tree-sitter-cli = "0.20"

[build-dependencies]
cc = "1.0"
tree-sitter-cli = "0.20"
