[package]
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
description = "Auto-formatter for RDF Turtle"
build = "build.rs"
edition = "2021"
keywords = ["Turtle"]
license = "Apache-2.0"
name = "turtlefmt"
readme = "README.md"
repository = "https://github.com/helsing-ai/turtlefmt"
rust-version = "1.70.0"
version = "0.1.1"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4", features = ["derive"] }
diffy = "0.3.0"
tree-sitter = "0.20.10"

[dev-dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
oxigraph = "0.3.22" # TODO: use only oxrdf and the parsers
tree-sitter-cli = "0.20.8"

[build-dependencies]
cc = "1.0.83"
tree-sitter-cli = "0.20.8"
