[package]
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
description = "Auto-formatter for RDF Turtle"
build = "build.rs"
edition = "2021"
keywords = ["Turtle"]
license = "Apache-2.0"
name = "turtlefmt"
readme = "README.md"
repository = "https://github.com/helsing-ai/turtlefmt"
rust-version = "1.81.0"
version = "0.1.2-dev"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
diffy = "0.4.0"
tree-sitter = "0.23.0"

[dev-dependencies]
oxrdf = "0.2.0"
oxttl = "0.1.0"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking"] }
tree-sitter-cli = "0.23.0"

[build-dependencies]
cc = "1.1.15"
tree-sitter-cli = "0.23.0"
