[project]
name = "turtlefmt"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
]

[project.urls]
Source = "https://github.com/helsing-ai/turtlefmt"
Tracker = "https://github.com/helsing-ai/turtlefmt/issues"

[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
